# pasta

./: README.md  circle.yml  pasta.cabal  spyglass.cabal  stack.yaml
.github/workflows/: haskell.yml
app/: Main.hs
src/: Pasta.hs  Spyglass.hs
src/Pasta/: Insert.hs  Prelude.hs  Select.hs  Types.hs  Update.hs
test/: Spec.hs
