name:                spyglass
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/spyglass#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2015 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Spyglass
  build-depends:       base >= 4.7 && < 5
                     , lens
                     , text
                     , text-show
                     , semigroups >= 0.18
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, ScopedTypeVariables

executable spyglass-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lens
                     , text
                     , text-show
                     , spyglass
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, ScopedTypeVariables

test-suite spyglass-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , spyglass
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, ScopedTypeVariables

source-repository head
  type:     git
  location: https://github.com/githubuser/spyglass
